unpackaged/main/default/objects/OrderApi__Receipt_Line_R__c/OrderApi__Receipt_Line_R__c.object-meta.xml
<CustomObject>
    <description>The Receipt Line (R) tracks the related Receipt Line&#39;s reporting currency and currency conversion rate at the time of creation when Fonteva&#39;s multi-currency is enabled.</description>
    <label>Receipt Line (R)</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Receipt Line (R) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Lines (R)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>