unpackaged/main/default/objects/OrderApi__Receipt_Line_R__c/fields/OrderApi__Conversion_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Conversion_Gain_Loss__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This value stores the sum of gains and losses created as a result of currency fluctuation for this item in the reporting currency.</description>
    <inlineHelpText>This value stores the sum of gains and losses created as a result of currency fluctuation for this item in the reporting currency.</inlineHelpText>
    <label>Conversion Gain/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>