unpackaged/main/default/objects/OrderApi__Receipt_Line_R__c/fields/OrderApi__Receipt_Line_R__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Line_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Builds a self-parenting relationship for taxes, shipping, adjustments, and other order processing functions.</description>
    <inlineHelpText>Builds a self-parenting relationship for taxes, shipping, adjustments, and other order processing functions.</inlineHelpText>
    <label>Receipt Line (R)</label>
    <referenceTo>OrderApi__Receipt_Line_R__c</referenceTo>
    <relationshipLabel>Receipt Lines (R)</relationshipLabel>
    <relationshipName>Receipt_Lines_R</relationshipName>
    <type>Lookup</type>
</CustomField>