unpackaged/main/default/objects/OrderApi__Receipt_Line_R__c/fields/OrderApi__Receipt_Line_Reference__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Line_Reference__c</fullName>
    <description>System field that creates a one to one relationship to a receipt line.</description>
    <externalId>true</externalId>
    <inlineHelpText>System field that creates a one to one relationship to a receipt line.</inlineHelpText>
    <label>Receipt Line Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>