unpackaged/main/default/objects/OrderApi__Receipt_Line_R__c/fields/OrderApi__Receipt_R__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_R__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the reporting Receipt Line to the reporting Receipt when Fonteva&#39;s multi-currency is enabled.</description>
    <inlineHelpText>Relates the reporting Receipt Line to the reporting Receipt when Fonteva&#39;s multi-currency is enabled.</inlineHelpText>
    <label>Receipt (R)</label>
    <referenceTo>OrderApi__Receipt_R__c</referenceTo>
    <relationshipLabel>Receipt Lines (R)</relationshipLabel>
    <relationshipName>Receipt_Lines_R</relationshipName>
    <type>Lookup</type>
</CustomField>